Added FindRaspberry cmake module.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,10 @@ find_package(Gphoto2 REQUIRED)
 
 if (RPI)
     add_definitions(-DRPI_BOARD)
+    find_package(Raspberry REQUIRED)
     set(BOARD_SOURCES RaspberryCamera.cpp RaspberryCamera.h)
-    set(BOARD_LIBS "-lbrcmGLESv2 -lbrcmEGL -lopenmaxil -lbcm_host -lvcos")
+    set(BOARD_LIBS ${RASPBERRY_LIBRARIES})
+    include_directories(${RASPBERRY_INCLUDE_DIR})
 else()
     set(BOARD_SOURCES)
     set(BOARD_LIBS)
