--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(photobooth)
 set(CMAKE_CXX_STANDARD 17)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D__FILENAME__='\"$(subst ${CMAKE_SOURCE_DIR}/,,$(abspath $<))\"'")
 
 option(RPI "Build for Raspberry Pi" OFF)
 
@@ -16,6 +17,7 @@ SET(Boost_USE_STATIC_LIBS ON)
 find_package(OpenCV REQUIRED)
 find_package(Boost COMPONENTS log REQUIRED )
 find_package(Gphoto2 REQUIRED)
+find_package(X11 REQUIRED)
 
 if (RPI)
     add_definitions(-DRPI_BOARD)
@@ -24,9 +26,16 @@ if (RPI)
     set(BOARD_LIBS ${RASPBERRY_LIBRARIES})
     include_directories(${RASPBERRY_INCLUDE_DIR})
 else()
+    find_package(OpenGL COMPONENTS EGL REQUIRED)
+    find_package(OpenGLES2 REQUIRED)
+    include_directories(${OpengGL_EGL_INCLUDE_DIR})
+    include_directories(${OPENGLES2_INCLUDE_DIR})
     set(BOARD_SOURCES)
-    set(BOARD_LIBS)
+
+    set(BOARD_LIBS OpenGL::EGL OpenGLES2::OpenGLES2)
 endif()
+
+include_directories(${X11_INCLUDE_DIR})
 
 set(DSLR_SOURCES
         dslr/DslrCamera.cpp
@@ -41,6 +50,8 @@ set(PHOTOBOOTH_SOURCES
         CameraInterface.h
         OpenCvCamera.cpp
         OpenCvCamera.h
+        XWindowOutputContext.cpp
+        XWindowOutputContext.h
         logging.h
         ${BOARD_SOURCES}
         ${DSLR_SOURCES})
@@ -49,4 +60,10 @@ include_directories(${GPHOTO2_INCLUDE_DIR})
 
 add_executable(photobooth ${PHOTOBOOTH_SOURCES})
 
-target_link_libraries(photobooth ${OpenCV_LIBS} ${BOARD_LIBS} ${Boost_LIBRARIES} ${Gphoto2_LIBRARIES} -lpthread)
+target_link_libraries(photobooth
+        ${OpenCV_LIBS}
+        ${BOARD_LIBS}
+        ${Boost_LIBRARIES}
+        ${Gphoto2_LIBRARIES}
+        ${X11_LIBRARIES}
+        -lpthread )
