Refactor EGL output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,25 +17,8 @@ SET(Boost_USE_STATIC_LIBS ON)
 find_package(OpenCV REQUIRED)
 find_package(Boost COMPONENTS log REQUIRED )
 find_package(Gphoto2 REQUIRED)
-find_package(X11 REQUIRED)
+find_package(Threads REQUIRED)
 
-if (RPI)
-    add_definitions(-DRPI_BOARD)
-    find_package(Raspberry REQUIRED)
-    set(BOARD_SOURCES RaspberryCamera.cpp RaspberryCamera.h)
-    set(BOARD_LIBS ${RASPBERRY_LIBRARIES})
-    include_directories(${RASPBERRY_INCLUDE_DIR})
-else()
-    find_package(OpenGL COMPONENTS EGL REQUIRED)
-    find_package(OpenGLES2 REQUIRED)
-    include_directories(${OpengGL_EGL_INCLUDE_DIR})
-    include_directories(${OPENGLES2_INCLUDE_DIR})
-    set(BOARD_SOURCES)
-
-    set(BOARD_LIBS OpenGL::EGL OpenGLES2::OpenGLES2)
-endif()
-
-include_directories(${X11_INCLUDE_DIR})
 
 set(DSLR_SOURCES
         dslr/DslrCamera.cpp
@@ -46,8 +29,44 @@ set(DSLR_SOURCES
         dslr/DslrContext.h)
 
 set(GUI_SOURCES
-        gui/XWindowOutputContext.cpp
-        gui/XWindowOutputContext.h)
+        gui/AbstractEglGui.cpp 
+        gui/AbstractEglGui.h)
+
+set(PLATFORM_SOURCES)
+set(PLATFORM_LIBS)
+
+if (RPI)
+    add_definitions(-DRPI_BOARD)
+    find_package(Raspberry REQUIRED)
+
+    list(APPEND PLATFORM_LIBS ${RASPBERRY_LIBRARIES})
+    include_directories(${RASPBERRY_INCLUDE_DIR})
+
+    list(APPEND GUI_SOURCES
+            gui/VideoCoreEglGui.cpp
+            gui/VideoCoreEglGui.h)
+
+    list(APPEND PLATFORM_SOURCES
+            RaspberryCamera.cpp
+            RaspberryCamera.h)
+else()
+    find_package(X11 REQUIRED)
+    find_package(OpenGL COMPONENTS EGL REQUIRED)
+    find_package(OpenGLES2 REQUIRED)
+
+    include_directories(${X11_INCLUDE_DIR})
+    include_directories(${OpengGL_EGL_INCLUDE_DIR})
+    include_directories(${OPENGLES2_INCLUDE_DIR})
+
+    list(APPEND GUI_SOURCES
+            gui/XlibEglGui.cpp
+            gui/XlibEglGui.h)
+
+    list(APPEND PLATFORM_LIBS
+            OpenGL::EGL
+            OpenGLES2::OpenGLES2
+            ${X11_LIBRARIES})
+endif()
 
 set(PHOTOBOOTH_SOURCES
         main.cpp
@@ -55,7 +74,7 @@ set(PHOTOBOOTH_SOURCES
         OpenCvCamera.cpp
         OpenCvCamera.h
         logging.h
-        ${BOARD_SOURCES}
+        ${PLATFORM_SOURCES}
         ${DSLR_SOURCES}
         ${GUI_SOURCES})
 
@@ -65,8 +84,7 @@ add_executable(photobooth ${PHOTOBOOTH_SOURCES})
 
 target_link_libraries(photobooth
         ${OpenCV_LIBS}
-        ${BOARD_LIBS}
+        ${PLATFORM_LIBS}
         ${Boost_LIBRARIES}
         ${Gphoto2_LIBRARIES}
-        ${X11_LIBRARIES}
-        -lpthread )
+        Threads::Threads )
